--- a/src/main/resources/assets/pokecubelevelrestriction/lang/en_us.json
+++ b/src/main/resources/assets/pokecubelevelrestriction/lang/en_us.json
@@ -1,3 +1,3 @@
 {
-  "message.pokecubelevelrestriction.failure": "%s seems too strong to capture, they broke out!!!"
+  "message.pokecubelevelrestriction.failure": "%1$s shattered your %2$s!!!"
 }
